update page texts

--- a/about-us.html
+++ b/about-us.html
@@ -244,22 +244,27 @@
 					<div class="col-xl-10 text-center">
 
 						<h2 class="h4 font-weight-bold color-gradient-purple mb-5">
-							Nullam tellus felis, eleifend id congue eu
+							Codeflakes works for its employees so that they provide you with the talent that your need.
 						</h2>
 
 						<p class="mb-4">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rhoncus lorem eget nulla pretium aliquam.
-							Pellentesque luctus accumsan diam, tristique sodales metus posuere et. Nunc dapibus mollis quam id facilisis. Nulla
-							eleifend, elit in facilisis egestas, sem lectus pellentesque quam, ut efficitur elit nunc sit amet dui. Vestibulum
-							id rhoncus nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut ornare quam.
+							CodeFlakes arises in 2018 in order to offer outsourcing services to different companies worldwide
+							focused exclusively on the development of Ruby technologies.
 						</p>
 
 						<p class="mb-4">
-							Integer mollis aliquet nunc vitae rhoncus. Proin in arcu ut justo suscipit condimentum. Nunc tempor interdum lacus
-							vitae pellentesque. Aliquam volutpat tellus eu lacus porttitor malesuada. Donec odio tortor, egestas in arcu in,
-							volutpat fermentum tortor. Integer aliquet a neque id elementum. Donec odio nisi, molestie viverra dapibus at,
-							aliquam elementum nisl. Vestibulum molestie, est in tincidunt maximus, mi odio ultricies nisi, bibendum tincidunt
-							turpis est ultricies dui. Sed quis augue augue. Suspendisse aliquet ultricies dui nec mollis.
+							Subsequently, it begins to develop its own products while in parallel is in charge of managing
+							specific developments for various customers.
+						</p>
+
+						<p class="mb-4">
+							Adopting different talents and technologies in a successful work environment that is based on
+							focusing on its employees and their needs so that they work efficiently and without obstacles.
+						</p>
+
+						<p class="mb-4">
+							Generating a successful, jovial and energetic work environment that constantly evolves to always
+							provide the best service.
 						</p>
 
 					</div>
@@ -586,7 +591,7 @@
 								<h3 class="h6 mb-4 font-weight-bold color-white">
 									Careers
 									<span class="d-block fst-italic font-weight-light">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										We are constantly looking for talents to work with and always to forge a successful work environment.
 									</span>
 								</h3>
 								<a href="careers.html" class="btn btn-white opacity-hover text-uppercase box-shadow">Work Offers</a>
