--- a/careers.html
+++ b/careers.html
@@ -241,23 +241,19 @@
 				<div class="col-xl-10 text-center">
 
 					<h2 class="h4 font-weight-bold color-gradient-purple mb-5">
-						<span class="font-weight-light d-xl-block">Quisque rhoncus lorem eget nulla pretium.</span>
-						Nullam tellus felis, eleifend id congue eu
+						<span class="font-weight-light d-xl-block">Our employees are no strangers to us.</span>
+						We focus on them so they can focus on our projects.
 					</h2>
 
 					<p class="mb-4">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rhoncus lorem eget nulla pretium aliquam.
-						Pellentesque luctus accumsan diam, tristique sodales metus posuere et. Nunc dapibus mollis quam id facilisis. Nulla
-						eleifend, elit in facilisis egestas, sem lectus pellentesque quam, ut efficitur elit nunc sit amet dui. Vestibulum
-						id rhoncus nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut ornare quam.
+						With a jovial and energetic atmosphere, we offer benefits for their comfort such as flexible hours,
+						vacations, paid holidays, support material to develop their career, and help with the acquisition of
+						hardware.
 					</p>
 
 					<p class="mb-4">
-						Integer mollis aliquet nunc vitae rhoncus. Proin in arcu ut justo suscipit condimentum. Nunc tempor interdum lacus
-						vitae pellentesque. Aliquam volutpat tellus eu lacus porttitor malesuada. Donec odio tortor, egestas in arcu in,
-						volutpat fermentum tortor. Integer aliquet a neque id elementum. Donec odio nisi, molestie viverra dapibus at,
-						aliquam elementum nisl. Vestibulum molestie, est in tincidunt maximus, mi odio ultricies nisi, bibendum tincidunt
-						turpis est ultricies dui. Sed quis augue augue. Suspendisse aliquet ultricies dui nec mollis.
+						All in order to always forge a successful work environment so that customers only have to direct
+						their attention to their needs. and our talents to their work without hindrance. 
 					</p>
 
 				</div>
