--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 									Custom software development
 								</h2>
 								<p class="h6 color-purple-dark font-weight-light">
-									Web or mobile, we make engaging apps tailored to your specific needs.
+									Web or mobile, we make engaging apps tailored to your defined set of requirements.
 								</p>
 
 							</div>
@@ -724,7 +724,7 @@
 								<h3 class="h6 mb-4 font-weight-bold color-white">
 									Careers
 									<span class="d-block fst-italic font-weight-light">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										We are constantly looking for talents to work with and always to forge a successful work environment.
 									</span>
 								</h3>
 								<a href="careers.html" class="btn btn-white opacity-hover text-uppercase box-shadow">Work Offers</a>
