--- a/our-products-detail.html
+++ b/our-products-detail.html
@@ -366,7 +366,7 @@
                                 <h3 class="h6 mb-4 font-weight-bold color-white">
                                     Careers
                                     <span class="d-block fst-italic font-weight-light">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        We are constantly looking for talents to work with and always to forge a successful work environment.
                                     </span>
                                 </h3>
                                 <a href="careers.html"
