--- a/our-products.html
+++ b/our-products.html
@@ -244,25 +244,14 @@
 					<div class="col-xl-10 text-center">
 	
 						<h2 class="h4 font-weight-bold color-gradient-purple mb-5">
-							<span class="font-weight-light d-xl-block">Quisque rhoncus lorem eget nulla pretium.</span>
-							Nullam tellus felis, eleifend id congue eu
+							<span class="font-weight-light d-xl-block">Our products are efficiently developed with constant and clear communication between</span>
+							the customer and the development team.
 						</h2>
 	
 						<p class="mb-4">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rhoncus lorem eget nulla pretium aliquam.
-							Pellentesque luctus accumsan diam, tristique sodales metus posuere et. Nunc dapibus mollis quam id facilisis. Nulla
-							eleifend, elit in facilisis egestas, sem lectus pellentesque quam, ut efficitur elit nunc sit amet dui. Vestibulum
-							id rhoncus nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut ornare quam.
+							Said team works with the use of continuous integration, preparing periodic and real tests
+							automatically and manually to quickly detect problems and their solutions efficiently
 						</p>
-	
-						<p class="mb-4">
-							Integer mollis aliquet nunc vitae rhoncus. Proin in arcu ut justo suscipit condimentum. Nunc tempor interdum lacus
-							vitae pellentesque. Aliquam volutpat tellus eu lacus porttitor malesuada. Donec odio tortor, egestas in arcu in,
-							volutpat fermentum tortor. Integer aliquet a neque id elementum. Donec odio nisi, molestie viverra dapibus at,
-							aliquam elementum nisl. Vestibulum molestie, est in tincidunt maximus, mi odio ultricies nisi, bibendum tincidunt
-							turpis est ultricies dui. Sed quis augue augue. Suspendisse aliquet ultricies dui nec mollis.
-						</p>
-	
 					</div>
 				</div>
 				<div class="ts-section pb-0">
@@ -343,7 +332,7 @@
 								<h3 class="h6 mb-4 font-weight-bold color-white">
 									Careers
 									<span class="d-block fst-italic font-weight-light">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										We are constantly looking for talents to work with and always to forge a successful work environment.
 									</span>
 								</h3>
 								<a href="careers.html" class="btn btn-white opacity-hover text-uppercase box-shadow">Work Offers</a>
