added: first codeflakes blog article

--- a/blog.html
+++ b/blog.html
@@ -272,22 +272,21 @@
 						<div class="row row-cols-lg-2" style="margin-bottom: -3rem;">
 
 							<article class="col mb-5">
-								<a href="blog-detail.html" class="ts-card-blog border-radius-20">
+								<a href="article-1.html" class="ts-card-blog border-radius-20">
 									<div class="card-blog-cover">
-										<figure style="background-image: url('theme/demo/blog/cover-blog.jpg');"></figure>
+										<figure style="background-image: url('theme/demo/blog/article-1.jpg');"></figure>
 									</div>
 									<div class="card-blog-body">
 										<div class="text-center mb-5">
 											<div class="card-blog-date shadow-black border-radius-50">
-												09/09/1999
+												26/11/2021
 											</div>
 										</div>
 										<h3 class="color-purple-dark p mb-4">
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit
+											The Workplace culture in Codeflakes.
 										</h3>
 										<p class="color-purple-light-2 font-weight-light mb-4">
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in ultricies arcu. Quisque vitae dictum mi.
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit.
+											To achieve the goals we set in Codeflakes, we first give special attention to our work environment.We consider that it is essential to have a healthy and productive work culture in search of the well-being of our workers and their performance.
 										</p>
 										<span class="d-inline-block btn btn-link text-decoration-none font-weight-medium p-0">
 											Read More
@@ -296,105 +295,17 @@
 									</div>
 									<div class="card-blog-footer">
 										<h2 class="p font-weight-regular badge badge-secondary text-uppercase">
-											Commerce tips
+											Culture
 										</h2>
-									</div>
-								</a>
-							</article>
-
-							<article class="col mb-5">
-								<a href="blog-detail.html" class="ts-card-blog border-radius-20">
-									<div class="card-blog-cover">
-										<figure style="background-image: url('theme/demo/blog/cover-blog.jpg');"></figure>
-									</div>
-									<div class="card-blog-body">
-										<div class="text-center mb-5">
-											<div class="card-blog-date shadow-black border-radius-50">
-												09/09/1999
-											</div>
-										</div>
-										<h3 class="color-purple-dark p mb-4">
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit
-										</h3>
-										<p class="color-purple-light-2 font-weight-light mb-4">
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in ultricies arcu. Quisque vitae dictum mi.
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit.
-										</p>
-										<span class="d-inline-block btn btn-link text-decoration-none font-weight-medium p-0">
-											Read More
-											<i class="fas fa-long-arrow-alt-right ms-2"></i>
-										</span>
-									</div>
-									<div class="card-blog-footer">
 										<h2 class="p font-weight-regular badge badge-secondary text-uppercase">
-											Commerce tips
+											Organization
 										</h2>
-									</div>
-								</a>
-							</article>
-
-							<article class="col mb-5">
-								<a href="blog-detail.html" class="ts-card-blog border-radius-20">
-									<div class="card-blog-cover">
-										<figure style="background-image: url('theme/demo/blog/cover-blog.jpg');"></figure>
-									</div>
-									<div class="card-blog-body">
-										<div class="text-center mb-5">
-											<div class="card-blog-date shadow-black border-radius-50">
-												09/09/1999
-											</div>
-										</div>
-										<h3 class="color-purple-dark p mb-4">
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit
-										</h3>
-										<p class="color-purple-light-2 font-weight-light mb-4">
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in ultricies arcu. Quisque vitae dictum mi.
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit.
-										</p>
-										<span class="d-inline-block btn btn-link text-decoration-none font-weight-medium p-0">
-											Read More
-											<i class="fas fa-long-arrow-alt-right ms-2"></i>
-										</span>
-									</div>
-									<div class="card-blog-footer">
 										<h2 class="p font-weight-regular badge badge-secondary text-uppercase">
-											Commerce tips
+											Productivity
 										</h2>
 									</div>
 								</a>
 							</article>
-
-							<article class="col mb-5">
-								<a href="blog-detail.html" class="ts-card-blog border-radius-20">
-									<div class="card-blog-cover">
-										<figure style="background-image: url('theme/demo/blog/cover-blog.jpg');"></figure>
-									</div>
-									<div class="card-blog-body">
-										<div class="text-center mb-5">
-											<div class="card-blog-date shadow-black border-radius-50">
-												09/09/1999
-											</div>
-										</div>
-										<h3 class="color-purple-dark p mb-4">
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit
-										</h3>
-										<p class="color-purple-light-2 font-weight-light mb-4">
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in ultricies arcu. Quisque vitae dictum mi.
-											Suspendisse nec tortor vitae eros bibendum finibus nec vitae velit.
-										</p>
-										<span class="d-inline-block btn btn-link text-decoration-none font-weight-medium p-0">
-											Read More
-											<i class="fas fa-long-arrow-alt-right ms-2"></i>
-										</span>
-									</div>
-									<div class="card-blog-footer">
-										<h2 class="p font-weight-regular badge badge-secondary text-uppercase">
-											Commerce tips
-										</h2>
-									</div>
-								</a>
-							</article>
-
 						</div>
 						<div class="row">
 							<div class="col mt-5">
