fixed: space on paragraph and verb

--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
 								in IT solutions for
 								businesses worldwide, the company aims to improve its clients' existing solutions as
 								well as creating new ones on
-								demand.We're registered under “Code Flakes LLC.”
+								demand.  We're registered as “Code Flakes LLC.”
 								
 							</p>
 
